# gravitaris

./: .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  IDEAS.md  README.md  imgui.ini
cmake/: mbedtls-user-config.h
data/models/bullets/bullet-0/: bullet-0.toml  bullet-0.yml
data/models/doodads/box/: box.toml  box.yml
data/models/planets/simple/: simple.toml  simple.yml
data/models/planets/simples/: simples.toml  simples.yml
data/models/ships/fighter-0/: fighter-0.toml
data/models/ships/fighter-1/: fighter-1.toml  fighter-1.yml
data/models/ships/interceptor-0/: interceptor-0.toml
data/models/ships/test-0/: test-0.toml
data/models/stars/sun/: sun.toml  sun.yml
data/models/structures/colony/: colony.toml
data/models/structures/lab/: lab.toml
data/models/ui/arrow-1/: arrow-1.toml
data/models/ui/team-marker/: team-marker.toml  team-marker.yml
data/shaders/: crt.f.glsl  glow-blur.f.glsl  glow-composite.f.glsl  line-miters.v.glsl  line-segments.v.glsl  line2.f.glsl  line2.v.glsl  starfield.f.glsl  starfield.v.glsl
data/shaders/old/: line.f.glsl  line.v.glsl  path.f.glsl  path.v.glsl  postproc.f.glsl  postproc.v.glsl
data/shaders/postprocess/: crt.f.glsl  glow-blur.f.glsl  glow-composite.f.glsl  glow-fullscreen.v.glsl  glow-threshold.f.glsl
data/shaders/simple/: lines.f.glsl  lines.v.glsl
data/ui/: hud.rml  main.rml  test.rml  vector-window.rml  vector.rcss
docs/: ai-ships.md  cgame-net-refactor-todo.md  code-review-response.md  corrade-containers-plan.md  flecs-migration.md  freighter-model-todo.md  gravity-well-1997.md  gravity-well-mode-plan.md  networking-plan.md  open-review-items.md  phase-4-handoff.md  refactoring-plan.md  selective-postprocess-ui.md  slice-components.md  wasm-plan.md
docs/adr/: 0001-netcode-model.md  0002-physics-ownership.md  0003-audio-backend.md
docs/gwell/manual/: GWELL.html
extlibs/clipper/: clipper.cpp  clipper.hpp
extlibs/nanosvg/: nanosvg.c  nanosvg.h
extlibs/physfs/: physfs.cpp
extlibs/stb_image/: stb_image.h
include/gravitaris/: gravitaris.hpp
include/gravitaris/cgame/: autopilot.hpp  camera-director.hpp  camera.hpp  cgame.hpp  fwd.hpp  team-color.hpp
include/gravitaris/cgame/audio/: audio-backend-factory.hpp  audio-backend.hpp  audio-system.hpp
include/gravitaris/cgame/component/: hit-flash.hpp  remote-smoothing.hpp  renderable.hpp
include/gravitaris/cgame/fx/: hit-flash-system.hpp
include/gravitaris/cgame/hud/: indicator-renderer.hpp
include/gravitaris/cgame/net/: cosmetic-bullet-despawner.hpp  net-diagnostics.hpp  own-ship-sync.hpp  remote-event-applier.hpp  rolling-history.hpp  snapshot-applier.hpp  snapshot-interpolator.hpp
include/gravitaris/cgame/renderer/: gl-safe-upload.hpp  glow-post-process.hpp  minimap-renderer.hpp  model-renderer.hpp  model-renderer2.hpp  simple-model-renderer.hpp  starfield-renderer.hpp
include/gravitaris/cgame/resource/: audio-clip.hpp  model.hpp  shape.hpp
include/gravitaris/cgame/spawner/: centity-spawner.hpp
include/gravitaris/game/: fwd.hpp  game.hpp  id.hpp  logging.hpp  perf-monitor.hpp
include/gravitaris/game/component/: ai-pilot.hpp  bullet.hpp  controls.hpp  damageable.hpp  faction-state.hpp  freighter.hpp  gravity-source.hpp  input-queue.hpp  landing-state.hpp  net-id.hpp  orbit.hpp  physics.hpp  planet-attachment.hpp  planet.hpp  structure.hpp  team.hpp  transform.hpp
include/gravitaris/game/control/: flight-controller.hpp
include/gravitaris/game/event/: game-event.hpp
include/gravitaris/game/fs/: filesystem-physfs.hpp  ifilesystem.hpp
include/gravitaris/game/gnc/: ai-personality-presets.hpp  behaviors.hpp
include/gravitaris/game/input/: input-command.hpp  input-log.hpp
include/gravitaris/game/nav/: trajectory-predictor.hpp
include/gravitaris/game/net/: byte-stream.hpp  client-prediction.hpp  loopback-transport.hpp  net-client.hpp  net-server.hpp  protocol.hpp  (+7 more)
include/gravitaris/ui/: ui.hpp
src/cgame/: autopilot.cpp  camera-director.cpp  cgame.cpp
src/cgame/audio/: audio-backend-factory.cpp  audio-system.cpp
src/cgame/fx/: hit-flash-system.cpp
src/cgame/hud/: indicator-renderer.cpp
src/cgame/input/: replay-controller.cpp
src/cgame/net/: cosmetic-bullet-despawner.cpp  cosmetic-bullet-reaper.cpp  own-ship-sync.cpp  remote-event-applier.cpp  snapshot-applier.cpp  snapshot-interpolator.cpp
src/cgame/renderer/: glow-post-process.cpp  minimap-renderer.cpp  model-renderer.cpp  model-renderer2.cpp  simple-model-renderer.cpp  starfield-renderer.cpp
src/cgame/resource/: audio-clip.cpp  model.cpp  shape.cpp
src/cgame/spawner/: centity-spawner.cpp
src/cgame/ui/: ui.cpp
src/client/: gravitaris.cpp  replay-controller.cpp  replay-controller.hpp  triangle-example.cpp  triangle-example.hpp  windows-hidpi.rc
src/game/: game.cpp  id.cpp  logging.cpp  perf-monitor.cpp
src/game/control/: flight-controller.cpp
src/game/fs/: filesystem-phys-fs.cpp
src/game/gnc/: ai-personality-presets.cpp  autopilot.cpp  behaviors.cpp  flight-controller.cpp  trajectory-predictor.cpp
src/game/guidance/: behaviors.cpp
src/game/input/: input-log.cpp
src/game/nav/: trajectory-predictor.cpp
src/game/net/: client-prediction.cpp  loopback-transport.cpp  net-client.cpp  net-server.cpp  own-ship-sync.cpp  protocol.cpp  simulated-net-transport.cpp  snapshot.cpp  webrtc-server-transport.cpp  webrtc-signaling.cpp  webrtc-transport.cpp
src/game/resource/: body.cpp
src/game/scenario/: classic-scenario.cpp  starting-complex.cpp
src/game/spawner/: entity-spawner.cpp
src/game/system/: ai-pilot-system.cpp  bullet-lifetime-system.cpp  conquest-system.cpp  damage-system.cpp  death-system.cpp  economy-system.cpp  faction-system.cpp  freighter-system.cpp  input-system.cpp  landing-state-system.cpp  orbit-system.cpp  physics-system.cpp  review.txt  ship-controls-system.cpp  structure-attachment-system.cpp  structure-defense-system.cpp
src/server/: gravitaris-server.cpp  main.cpp
tools/: gen-sfx.py
tools/server/: main.cpp
tools/sim-test/: main.cpp
tools/wasm/: build.sh  index.html  run-dev.sh
(+108 files in other folders)
